[gd_scene load_steps=19 format=2]

[ext_resource path="res://Menu/SetingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonty/Font.otf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/hoimar.planetgen/scenes/gui/gui.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/ButtonStyles/SetingsMenu.tres" type="StyleBox" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.384314, 0.619608, 0.776471, 1 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 15.0
content_margin_right = 15.0
border_width_right = 1
border_blend = true

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color( 0.886275, 0.298039, 0.0117647, 1 )
border_blend = true

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
Button/colors/font_color_hover = Color( 1, 0.8, 0.109804, 1 )
Button/colors/font_color_pressed = Color( 0.886275, 0.298039, 0.0117647, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 7 )
Label/styles/normal = SubResource( 12 )
TabContainer/colors/font_color_bg = Color( 1, 1, 1, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 1, 1, 1, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 0
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = SubResource( 10 )
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource( 13 )
TabContainer/styles/tab_bg = SubResource( 8 )
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = SubResource( 9 )
Tabs/colors/font_color_bg = Color( 0.69, 0.69, 0.69, 1 )
Tabs/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Tabs/colors/font_color_fg = Color( 0.94, 0.94, 0.94, 1 )
Tabs/constants/hseparation = 4
Tabs/constants/label_valign_bg = 2
Tabs/constants/label_valign_fg = 0
Tabs/constants/top_margin = 24
Tabs/fonts/font = SubResource( 10 )
Tabs/icons/close = null
Tabs/icons/decrement = null
Tabs/icons/decrement_highlight = null
Tabs/icons/increment = null
Tabs/icons/increment_highlight = null
Tabs/styles/button = null
Tabs/styles/button_pressed = null
Tabs/styles/panel = null
Tabs/styles/tab_bg = null
Tabs/styles/tab_disabled = null
Tabs/styles/tab_fg = null

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 0, 0, 1 )

[node name="SettingsMenu" type="Popup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.0
margin_top = -295.0
margin_right = 461.0
margin_bottom = 294.0
theme = SubResource( 11 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SettingTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="Video" type="Tabs" parent="SettingTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
focus_neighbour_bottom = NodePath("MarginContainer/VideoSettings/DisplayOptions")
tab_close_display_policy = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VideoSettings" type="GridContainer" parent="SettingTabs/Video/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 918.0
margin_bottom = 532.0
custom_constants/vseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenMode" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_right = 398.0
margin_bottom = 39.0
size_flags_vertical = 1
text = "Display Mode"

[node name="DisplayOptions" type="OptionButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 764.0
margin_right = 893.0
margin_bottom = 39.0
focus_neighbour_top = NodePath("..")
focus_neighbour_right = NodePath("../../../../Audio")
focus_neighbour_bottom = NodePath("../VsyncBtn")
size_flags_horizontal = 10
custom_styles/focus = ExtResource( 4 )
text = "Windowed"
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="Vsync" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 59.0
margin_right = 398.0
margin_bottom = 98.0
text = "Vsync"

[node name="VsyncBtn" type="CheckButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 829.0
margin_top = 59.0
margin_right = 893.0
margin_bottom = 98.0
focus_neighbour_right = NodePath("../../../../Audio")
focus_neighbour_bottom = NodePath("../DisplayDebug")
size_flags_horizontal = 8
custom_styles/focus = ExtResource( 4 )

[node name="DisplayDebug2" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 118.0
margin_right = 398.0
margin_bottom = 157.0
text = "Display Debug info"

[node name="DisplayDebug" type="CheckButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 829.0
margin_top = 118.0
margin_right = 893.0
margin_bottom = 157.0
focus_neighbour_right = NodePath("../../../../Audio")
focus_neighbour_bottom = NodePath("../MaxFpsOption/MaxFpsSlider")
size_flags_horizontal = 8
custom_styles/focus = ExtResource( 4 )

[node name="MaxFps" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 177.0
margin_right = 398.0
margin_bottom = 216.0
text = "Max FPS"

[node name="MaxFpsOption" type="HBoxContainer" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 402.0
margin_top = 177.0
margin_right = 893.0
margin_bottom = 216.0
size_flags_horizontal = 10
custom_constants/separation = 10

[node name="MaxFpsVal" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings/MaxFpsOption"]
margin_right = 81.0
margin_bottom = 39.0
text = "max"

[node name="MaxFpsSlider" type="HSlider" parent="SettingTabs/Video/MarginContainer/VideoSettings/MaxFpsOption"]
margin_left = 91.0
margin_right = 491.0
margin_bottom = 39.0
rect_min_size = Vector2( 400, 0 )
focus_neighbour_right = NodePath("../../../../../Audio/MarginContainer2/AudioSettings/MasterVol")
focus_neighbour_bottom = NodePath("../../DisplayOptions")
size_flags_horizontal = 8
size_flags_vertical = 1
custom_styles/grabber_area_highlight = SubResource( 14 )
min_value = 30.0
max_value = 500.0
value = 500.0
rounded = true

[node name="Audio" type="Tabs" parent="SettingTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 43.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer2" type="MarginContainer" parent="SettingTabs/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioSettings" type="GridContainer" parent="SettingTabs/Audio/MarginContainer2"]
margin_left = 25.0
margin_top = 25.0
margin_right = 888.0
margin_bottom = 517.0
custom_constants/vseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVol" type="Label" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
margin_right = 398.0
margin_bottom = 39.0
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
margin_left = 463.0
margin_right = 863.0
margin_bottom = 39.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="MusicVol" type="Label" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
margin_top = 59.0
margin_right = 329.0
margin_bottom = 98.0
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
margin_left = 463.0
margin_top = 59.0
margin_right = 863.0
margin_bottom = 98.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="SfxVol" type="Label" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
margin_top = 118.0
margin_right = 329.0
margin_bottom = 157.0
text = "SFX Volume"

[node name="SfxSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer2/AudioSettings"]
margin_left = 463.0
margin_top = 118.0
margin_right = 863.0
margin_bottom = 157.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="Gui" parent="." instance=ExtResource( 3 )]
pause_mode = 2
visible = false

[connection signal="item_selected" from="SettingTabs/Video/MarginContainer/VideoSettings/DisplayOptions" to="." method="_on_DisplayOptions_item_selected"]
[connection signal="toggled" from="SettingTabs/Video/MarginContainer/VideoSettings/VsyncBtn" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="SettingTabs/Video/MarginContainer/VideoSettings/DisplayDebug" to="." method="_on_DisplayDebug_toggled"]
[connection signal="value_changed" from="SettingTabs/Video/MarginContainer/VideoSettings/MaxFpsOption/MaxFpsSlider" to="." method="_on_MaxFpsSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer2/AudioSettings/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer2/AudioSettings/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer2/AudioSettings/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
